[package]
name = "translator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anthropic = { git = "https://github.com/AbdelStark/anthropic-rs" }
tokio = { version = "1.25.0", features = ["full"] }
env_logger = "0.11.3"
log = "0.4.17"
dotenv = "0.15.0"